# sudoku_solver

./: .gitignore  .gitmodules  CMakeLists.txt
app/: CMakeLists.txt  main.cpp
cmd/: CMakeLists.txt
cmd/include/: BoardPrinter.h  Cmd.h
cmd/src/: BoardPrinter.cpp  BoardPrinter.h
docker/: cpp_env.Dockerfile
engine/: CMakeLists.txt
engine/include/: Board.h  Cell.h  Checker.h  Group.h  Solver.h  Validator.h
engine/src/: Board.cpp  Checker.cpp  Solver.cpp  Validator.cpp
logger/: CMakeLists.txt
logger/include/: Logger.h  Stopwatch.h  TimerObject.h
tests/: CMakeLists.txt
tests/test_cases/: CMakeLists.txt  TestBoard.cpp  TestEngine.cpp  TestSolver.cpp  TestSolverBruteForce.cpp  TestSolverBruteForcePrio.cpp  TestSudokus.cpp  TestValidator.cpp
tests/tests_database/: CMakeLists.txt  set_of_sudokus.csv
